--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,47 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="action_bar_size">56dp</dimen>
+
+
+    <!-- Dim -->
+    <dimen name="dim1">1dp</dimen>
+    <dimen name="dim2">2dp</dimen>
+    <dimen name="dim3">3dp</dimen>
+    <dimen name="dim4">4dp</dimen>
+    <dimen name="dim5">5dp</dimen>
+    <dimen name="dim6">6dp</dimen>
+    <dimen name="dim7">7dp</dimen>
+    <dimen name="dim8">8dp</dimen>
+    <dimen name="dim9">9dp</dimen>
+    <dimen name="dim11">11dp</dimen>
+    <dimen name="dim19">19dp</dimen>
+    <dimen name="dim13">13dp</dimen>
+    <dimen name="dim14">14dp</dimen>
+    <dimen name="dim15">15dp</dimen>
+    <dimen name="dim17">17dp</dimen>
+    <dimen name="dim16">16dp</dimen>
+    <dimen name="dim32">32dp</dimen>
+    <dimen name="dim10">10dp</dimen>
+    <dimen name="dim24">24dp</dimen>
+    <dimen name="dim12">12dp</dimen>
+    <dimen name="dim20">20dp</dimen>
+    <dimen name="dim40">40dp</dimen>
+    <dimen name="dim30">30dp</dimen>
+    <dimen name="dim50">50dp</dimen>
+    <dimen name="dim70">70dp</dimen>
+    <dimen name="dim80">80dp</dimen>
+    <dimen name="dim18">18dp</dimen>
+    <dimen name="dim60">60dp</dimen>
+    <dimen name="dim120">120dp</dimen>
+    <dimen name="dim150">150dp</dimen>
+
+    <!--font size -->
+    <dimen name="font20">20sp</dimen>
+    <dimen name="font18">18sp</dimen>
+    <dimen name="font16">16sp</dimen>
+    <dimen name="font15">15sp</dimen>
+    <dimen name="font14">14sp</dimen>
+    <dimen name="font12">12sp</dimen>
+    <dimen name="font10">10sp</dimen>
 </resources>
