--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -16,7 +16,19 @@
         android:layout_gravity="right"
 
         >
-
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+          <TextView
+              android:id="@+id/title_data"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerInParent="true"
+              android:textColor="@color/white"
+              android:text="Login"
+              android:textSize="@dimen/font16"
+              />
+      </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     <View
       android:layout_width="match_parent"
